# elrond-wasm-rs

./: .gitignore  CHANGELOG.md  Cargo.toml
contracts/examples/escrow-account/: Cargo.toml
contracts/examples/escrow-account/abi/: Cargo.toml
contracts/examples/escrow-account/src/: contract.rs  lib.rs  transaction.rs
contracts/examples/escrow-account/wasm/: Cargo.toml
contracts/examples/multisig-deployer/: Cargo.toml
contracts/examples/multisig-deployer/abi/: Cargo.toml
contracts/examples/multisig-deployer/abi/src/: main.rs
contracts/examples/multisig-deployer/mandos/: deploy.scen.json
contracts/examples/multisig-deployer/mandos/steps/: deploy.steps.json  init_accounts.steps.json
contracts/examples/multisig-deployer/src/: lib.rs  multisig_deployer.rs
contracts/examples/multisig-deployer/test-contracts/: multisig.wasm
contracts/examples/multisig-deployer/wasm/: Cargo.toml
contracts/examples/multisig-deployer/wasm/src/: lib.rs
contracts/examples/multisig-manager/: Cargo.toml
contracts/examples/multisig-manager/abi/: Cargo.toml
contracts/examples/multisig-manager/abi/src/: main.rs
contracts/examples/nft-advert/: Cargo.toml
contracts/feature-tests/basic-features/: Cargo.toml
elrond-codec/: Cargo.toml
elrond-codec/src/: lib.rs  nested_ser.rs
elrond-wasm/: Cargo.toml
elrond-wasm-debug/src/: execute_mandos.rs
elrond-wasm-derive/src/: contract_gen_storage.rs
elrond-wasm/src/: err_msg.rs  lib.rs
elrond-wasm/src/storage/: mod.rs  storage_get.rs  storage_key.rs  storage_set.rs
elrond-wasm/src/types/: boxed_bytes.rs  h256.rs
(+39 files in other folders)
