[package]
name = "multisig-deployer"
version = "0.0.0"
authors = ["Traian Anghel <tanghel@live.com>"]
edition = "2018"
publish = false

[lib]
path = "src/multisig_deployer.rs"

[features]
wasm-output-mode = [
    "elrond-wasm-node"
]

[dependencies.elrond-wasm]
version = "0.18.1"
path = "../../../elrond-wasm"
features = ["derive"]

[dependencies.elrond-wasm-node]
version = "0.18.1"
path = "../../../elrond-wasm-node"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.18.1"
path = "../../../elrond-wasm-debug"