[package]
name = "multisig-manager-abi"
version = "0.0.0"
authors = ["Traian Anghel <tanghel@live.com>"]
edition = "2018"
publish = false

[dependencies.multisig-manager]
path = ".."

[dependencies.elrond-wasm]
version = "0.14.1"
path = "../../../../elrond-wasm"

[dependencies.elrond-wasm-debug]
version = "0.14.1"
path = "../../../../elrond-wasm-debug"
